--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(run_db_query)
 export(run_report)
 export(trimChrVars)
 import(DBI)
+import(R.utils)
 import(RODBC)
 import(httr)
 import(knitr)
