--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(run_db_query)
 export(run_report)
 export(trimChrVars)
 import(DBI)
-import(R.utils)
 import(RODBC)
 import(httr)
 import(knitr)
@@ -18,3 +17,4 @@ import(odbc)
 import(rmarkdown)
 import(shiny)
 import(tidyverse)
+importFrom(R.utils,withTimeout)
