--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,12 +9,9 @@ export(runTableReplacements)
 export(run_db_query)
 export(run_report)
 export(trimChrVars)
-import(DBI)
 import(RODBC)
-import(httr)
 import(knitr)
-import(odbc)
 import(rmarkdown)
-import(shiny)
-import(tidyverse)
+import(tidyr)
+import(dplyr)
 importFrom(R.utils,withTimeout)
