--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,9 +10,11 @@ export(run_db_query)
 export(run_report)
 export(trimChrVars)
 import(RODBC)
+import(dplyr)
+import(ggplot2)
 import(knitr)
 import(rmarkdown)
-import(tidyr)
-import(dplyr)
 import(shiny)
+import(tidyr)
 importFrom(R.utils,withTimeout)
+importFrom(utils,read.csv2)
