--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: chordsTables
 Title: Package for generating CHORDS priority tables
-Version: 0.4.2
+Version: 0.4.3
 Authors@R: c(
-    person("Will", "Carter", email = "William.A.Carter@cuanschutz.edu", role = c("aut", "ctb")),
+    person("Will", "Carter", email = "William.A.Carter@cuanschutz.edu", role = c("aut", "ctb", "cre")),
     person("Emily", "Bacon", email = "baconanalyticsco@gmail.com", role = c("aut", "ctb")),
-    person("Carter", "Sevick", email = "carter.sevick@ucdenver.edu", role = c("aut", "ctb")),
-    person("Matthew", "Cox-Martin", email = "matthew.cox-martin@ucdenver.edu", role = c("aut", "cre"))
+    person("Carter", "Sevick", email = "carter.sevick@cuanschutz.edu", role = c("aut", "ctb"))
     )
 Maintainer: Will Carter <William.A.Carter@cuanschutz.edu>
 Description: This package contains the function, .RMD files, and data files necessary for generating all CHORDS priority tables.
@@ -17,6 +16,7 @@ Imports:
     RODBC,
     knitr,
     dplyr,
+    ggplot2,
     R.utils,
     shiny
 License: What license is it under?
