- Fixed some errors around trying to use a different port

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(charVars)
 export(close_conection)
 export(getConnectionString)
 export(get_new_connection)
+export(notNAorNullorEmpty)
 export(runTableReplacements)
 export(run_db_query)
 export(run_report)
