--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,10 @@ export(run_report)
 export(trimChrVars)
 import(RODBC)
 import(dplyr)
+import(flextable)
 import(ggplot2)
 import(knitr)
+import(officer)
 import(rmarkdown)
 import(shiny)
 import(tidyr)
